Add gc logging to JavaUpToDatePerformanceTest